[package]
name = "rpd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
inquire = "0.3.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
